# bonsai

./: .gitignore  .pre-commit-config.yaml  CLI_USAGE.md  CONTRIBUTING.md  README.md  SAM2_image_predictor_example.ipynb  bonsai.sky.yml  pyproject.toml  requirements.txt
.gemini/: config.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: model-request---enter-model-name-here-.md
.github/workflows/: pre-commit.yml  selective-tests.yml
bonsai/: README.md  __init__.py  __main__.py
bonsai/models/: __init__.py
bonsai/models/CLIP/: config.py
bonsai/models/CLIP/test/: CLIP_JAX_example.ipynb
bonsai/models/CLIP/utils/: data_loader.py  preprocess.py
bonsai/models/ConvNext/: modeling.py  params.py
bonsai/models/ConvNext/tests/: run_model.py  test_outputs_ConvNext.py
bonsai/models/ResNet-152/: README.md
bonsai/models/ResNet-152/tests/: JAX_ResNet_152.ipynb  PyTorch_ResNet_152.ipynb
bonsai/models/clip/: README.md  __init__.py  clip_model_jax.ipynb  modeling.py  params.py  run_model.py  tokenizer.py  train.py
bonsai/models/clip/tests/: run_model.py  test_model.py  test_modeling.py  test_outputs_clip.py
bonsai/models/convnext/: README.md  modeling.py  params.py
bonsai/models/convnext/tests/: run_model.py  test_outputs_ConvNext.py
bonsai/models/densenet121/: README.md  modeling.py  params.py
bonsai/models/densenet121/tests/: DenseNet121_ImageNet_validation_example.ipynb  (+4 more)
bonsai/models/dinov3/: README.md  Readme.md  modeling.py  params.py
bonsai/models/efficientnet/: README.md  modeling.py  params.py  weights.py
bonsai/models/gat/: README.md  modeling.py  params.py
bonsai/models/gemma3/: README.md  modeling.py  params.py
bonsai/models/gpt_oss/: modeling.py  params.py
bonsai/models/llada/: README.md  modeling.py  params.py
bonsai/models/llada_8b/: README.md  modeling.py  params.py
bonsai/models/llama32/: README.md  modeling.py  params.py
bonsai/models/llama3_2/: README.md  modeling.py  params.py
bonsai/models/mamba2/: README.md  modeling.py  params.py
bonsai/models/mimo_audio/: README.md  __init__.py  mimo_audio_configuration.py  mimo_audio_tokenizer.py  mimo_audio_tokenizer_configuration.py  mimo_audio_tokenizer_params.py  modeling.py  params.py
bonsai/models/olmo3/: README.md  modeling.py  params.py
bonsai/models/qwen2/: README.md  modeling.py  params.py
bonsai/models/qwen3/: README.md  modeling.py  params.py
bonsai/models/qwen3-vl/: modeling.py  params.py
bonsai/models/qwen3_vl/: README.md  Readme.md  __init__.py  modeling.py  params.py
bonsai/models/qwen3vl/: modeling.py  params.py
bonsai/models/resnet/: README.md  modeling.py  params.py
bonsai/models/resnet50/: README.md  model.py  modeling.py  params.py
bonsai/models/sam2/: README.md  model.py  model_hiera_det.py  model_image_encoder.py  model_mask_decoder.py  model_memory_attention.py  model_memory_encoder.py  model_positional_encoding.py  model_prompt_encoder.py  model_sam2_transforms.py  model_transformer.py  model_utils.py  modeling.py  params.py
bonsai/models/t5gemma2/: README.md  modeling.py  params.py
bonsai/models/umt5/: README.md  modeling.py  params.py
bonsai/models/unet/: README.md  modeling.py  params.py
bonsai/models/unetr/: README.md  modeling.py
bonsai/models/vae/: README.md  modeling.py  params.py
bonsai/models/vgg19/: README.md  modeling.py  params.py
bonsai/models/vit/: README.md  modeling.py  params.py
bonsai/models/vjepa2/: README.md  Readme.md  modeling.py  params.py
bonsai/models/wan2/: __init__.py  modeling.py  params.py  pipeline_wan.py  scheduler.py  scheduling_utils.py  t5.py  t5_jax.py  test_unipc_scheduler.py  transformer_wan.py  umt5.py  unipc_multistep_scheduler.py  vae.py
bonsai/models/whisper/: IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  README.md  __init__.py  audio.py  decoding.py  decoding_jax.py  generation.py  model.py  model_fixed.py  modeling.py  params.py  preprocessing.py  timing.py  tokenizer.py  transcribe.py  utils.py
bonsai/tests/data/: Speech_12dB_s16_trimmed.flac
bonsai/tutorials/: JAX_machine_translation.ipynb
bonsai/utils/: README.md  __init__.py  kv_cache.py  params.py  rope.py  samplers.py
bonsai/utils/tests/: kv_cache_test.py  samplers.py  samplers_test.py
scripts/: run_selective_tests.py
(+162 files in other folders)
