[project]
name = "jax-bonsai"
dynamic = ["version"]
authors = [
  { name = "JAX-bonsai developers", email = "jiyounha@google.com" },
]
description = "A collection of lightweight, open-source models built on JAX."
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jax",
  "jaxlib",
  "jaxtyping",
  "flax >= 0.12.0",
  "jinja2",
  "huggingface-hub",
  "transformers",  # for the tokenizer and checkpoint
]

[project.optional-dependencies]
densenet121 = ["h5py"]
efficientnet = ["timm"]
whisper = ["librosa"]
qwen3 = []
resnet50 = []
sam2 = ["pillow>=11.3.0"]
vgg19 = ["h5py"]

dev = [
  "xprof",
  "pre-commit",
]

testing = [
  "pytest",
  "pytest-xdist",
  "torch",
  "keras_hub",
  "tensorflow",
  "timm",
]

models = [
  "jax-bonsai[densenet121,efficientnet,whisper,qwen3,resnet50,sam2,vgg19]",
]

[project.urls]
Source = "https://github.com/jax-ml/bonsai"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bonsai*"]

[tool.setuptools.dynamic]
version = {attr = "bonsai.__version__"}

[tool.ruff]
target-version = "py311"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",  # Pycodestyle - Errors
  "F",  # Pyflakes
  "I",  # isort - consistent import orders and formatting
  "W",  # Pycodestyle - Warnings
  "RUF",  # Ruff-specific rules
]
ignore = [
  "E731",  # lambdas are allowed
  "E501",  # don't check line lengths
  "F401",  # allow unused imports
  "E402",  # allow modules not at top of file
  "E741",  # allow "l" as a variable name
  "E703",  # allow semicolons (for jupyter notebooks)
  "RUF009",  # Do not perform function call in dataclass defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
